examples/test/testpolicy10129.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10129
  namespace: namespace298
spec:
  podSelector:
    matchLabels:
      key14: value0
      key3: value15
      key26: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value48
          key11: value15
          key23: value35
      podSelector:
        matchLabels:
          key15: value38
